# linux-utcp

./: .gitignore  README.md  pyproject.toml
agent/: langchain_tools.py  test_langchain_agent.py  test_manual_loading.py  test_utcp_agent.py
docs/: TUTORIAL.md
examples/: test_all_commands.py  test_utcp_client.py
scripts/: generate_manual.py
src/linux_utcp/: __init__.py  cli.py
src/linux_utcp/commands/: __init__.py  network.py  process.py  service.py  system.py
src/linux_utcp/utils/: __init__.py  formatting.py
