[project]
name = "linux-utcp"
version = "0.1.0"
description = "Linux system diagnostics toolkit using UTCP for AI agent integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Máirín Duffy", email = "duffy@redhat.com"}
]

dependencies = [
    "utcp>=1.0.0",
    "utcp-cli>=1.0.0",
    "utcp-agent>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "click>=8.1.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
linux-utcp = "linux_utcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
